style: cleanup code smell